fix(twitch): path to affiliate icons & collapsed sidebar

--- a/styles/twitch/catppuccin.user.less
+++ b/styles/twitch/catppuccin.user.less
@@ -1528,8 +1528,20 @@
     }
 
     .stream-manager--page-view .mosaic-window-body,
-    .sunlight-expanded-nav-drop-down-menu-layout__scrollable-area {
+    .sunlight-expanded-nav-drop-down-menu-layout__scrollable-area,
+    .sunlight-collapsed-nav-drop-down-menu__scrollable-area {
       background-color: @mantle;
+    }
+
+    [class*="analyticsTargetProgressCard--"]
+      > div:nth-child(2)
+      .creator-home-card__icon
+      .creator-home-card__icon-svg {
+      color: @text !important;
+    }
+
+    [class*="progressContainer--"] {
+      background-color: @surface0;
     }
   }
 }
